// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Installed packages title"
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                aria-label="Installed packages value"
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Services title"
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                aria-label="Services value"
                class=""
                data-ouia-component-id="Services value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Running processes title"
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                aria-label="Running processes value"
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Repositories title"
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                aria-label="Repositories value"
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfigurationCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Installed packages title"
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                aria-label="Installed packages value"
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/installed_packages"
                  >
                    1 package
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Services title"
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                aria-label="Services value"
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Running processes title"
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                aria-label="Running processes value"
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Repositories title"
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                aria-label="Repositories value"
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/repositories"
                  >
                    1 enabled
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfigurationCard should render enabled/disabled 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Installed packages title"
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                aria-label="Installed packages value"
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/installed_packages"
                  >
                    1 package
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Services title"
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                aria-label="Services value"
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Running processes title"
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                aria-label="Running processes value"
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Repositories title"
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                aria-label="Repositories value"
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/repositories"
                  >
                    1 enabled / 1 disabled
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfigurationCard should render extra 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Installed packages title"
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                aria-label="Installed packages value"
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/installed_packages"
                  >
                    1 package
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Services title"
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                aria-label="Services value"
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Running processes title"
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                aria-label="Running processes value"
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                aria-label="Repositories title"
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                aria-label="Repositories value"
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/repositories"
                  >
                    1 enabled
                  </a>
                </div>
              </dd>
              <dt
                aria-label="something title"
                class=""
                data-ouia-component-id="something title"
              >
                something
              </dt>
              <dd
                aria-label="something value"
                class=""
                data-ouia-component-id="something value"
              >
                test
              </dd>
              <dt
                aria-label="with click title"
                class=""
                data-ouia-component-id="with click title"
              >
                with click
              </dt>
              <dd
                aria-label="with click value"
                class=""
                data-ouia-component-id="with click value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/undefined"
                  >
                    1 tests
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
